--- a/resources/assets/sass/v3/partial/group-card.scss
+++ b/resources/assets/sass/v3/partial/group-card.scss
@@ -30,8 +30,8 @@
                 z-index: 999;
                 color: var(--primary-color);
                 text-align: center;
-                font-size: 35px;
-                line-height: 35px;
+                font-size: 35px !important;
+                line-height: 35px !important;
                 max-width:80%;
                 margin:25px auto 1rem;
                 text-decoration: none;
