--- a/resources/assets/sass/v3/layout/_footer.scss
+++ b/resources/assets/sass/v3/layout/_footer.scss
@@ -111,7 +111,7 @@ footer.footer {
             line-height: 16px;
 
             a, span {
-                color: var(--footer-bg-color);
+                color: var(--light-text);
                 line-height: 24px;
             }
 
