--- a/resources/assets/sass/v3/pagebuilder/blocks/big_banner.scss
+++ b/resources/assets/sass/v3/pagebuilder/blocks/big_banner.scss
@@ -20,7 +20,6 @@
         mix-blend-mode: multiply;
     }
 
-
     .big_banner {
         min-height: 80vh;
 
@@ -29,15 +28,27 @@
             text-align: center;
             padding-top:25vh;
 
+            &.no-subtitle {
+                padding-top:28vh;
+            }
+
+            &.no-button {
+                padding-top:28vh;
+            }
+
+            &.no-button.no-subtitle {
+                padding-top:31vh;
+            }
+
             z-index:2;
 
             h1 {
                 font-weight: bold;
-                font-size:110px;
-                line-height: 120px;
+                font-size:6rem;
+                line-height: 7rem;
                 text-shadow: 1px 1px 13px #000;
                 margin-top:0;
-                margin-bottom:1rem;
+                margin-bottom:0;
                 color:#fff !important;
             }
 
@@ -46,7 +57,7 @@
                 line-height: 50px;
                 text-shadow: 1px 1px 6px #000;
                 color:#fff !important;
-                margin-top:0;
+                margin-top:1rem;
                 margin-bottom:2rem;
                 font-weight: normal;
             }
