fix footer & no news

--- a/resources/assets/sass/v3/layout/_footer.scss
+++ b/resources/assets/sass/v3/layout/_footer.scss
@@ -38,6 +38,7 @@ footer.footer {
         }
 
         h3 {
+            margin-top:0;
             padding-bottom: 0;
             color: var(--footer-primary-color);
 
