--- a/resources/assets/sass/v3/layout/content/package-single.scss
+++ b/resources/assets/sass/v3/layout/content/package-single.scss
@@ -1,4 +1,5 @@
-&.package-single {
+&.package-single,
+&.package-collection {
 
     .main-title {
         margin-bottom:2rem;
@@ -25,6 +26,28 @@
             span {
                 display: inline-block;
             }
+        }
+    }
+
+    .progress {
+        position: relative;
+        max-width:200px;
+        margin:1rem auto 1rem;
+        background-color:var(--medium-text);
+
+        .progress-bar {
+            background-color:var(--primary-color)
+        }
+
+        .detail {
+            position: absolute;
+            text-align: center;
+            display: block;
+            width:100%;
+            font-size: .7rem;
+            line-height: 1.3rem;
+            font-weight: bold;
+            color:var(--dark-text)
         }
     }
 }
