--- a/resources/assets/sass/v3/layout/content/package-single.scss
+++ b/resources/assets/sass/v3/layout/content/package-single.scss
@@ -7,6 +7,10 @@
         span {
             display:block;
         }
+    }
+
+    .main-image {
+        margin-bottom:1rem;
 
         img {
             display: inline-block;
@@ -15,17 +19,33 @@
             margin-bottom:0;
         }
 
-        @media (min-width:768px) {
-            margin-bottom:2rem;
+        .label.top-left {
+            position: absolute;
+            top:1rem;
+            left:1rem;
+        }
+    }
 
-            img {
-                max-width:200px;
-                margin-bottom:0;
-            }
+    .options-title {
+        margin-top:2rem;
+        margin-bottom:3rem;
+    }
 
-            span {
-                display: inline-block;
-            }
+    @media (min-width:768px) {
+        margin-bottom:2rem;
+
+        .options-title {
+            margin-top:0rem;
+            margin-bottom:3rem;
+        }
+
+        img {
+            max-width:300px;
+            margin-bottom:0;
+        }
+
+        span {
+            display: inline-block;
         }
     }
 
@@ -49,5 +69,30 @@
             font-weight: bold;
             color:var(--dark-text)
         }
+    }
+}
+
+&.package-collection {
+    .collection-option {
+
+        .main-image {
+            margin-bottom:1rem;
+            text-align: center;
+
+            img {
+                display: inline-block;
+                max-width:100%;
+                max-height:75px;
+                height:auto;
+                margin-bottom:0;
+            }
+
+            .label.top-left {
+                position: absolute;
+                top:-1rem;
+                left:0;
+            }
+        }
+
     }
 }
