add filters & search to shop index + partial title limit refactor

--- a/resources/assets/sass/v3/layout/default-content.scss
+++ b/resources/assets/sass/v3/layout/default-content.scss
@@ -78,6 +78,7 @@ select:active,
 input[type=text],
 input[type=email],
 input[type=number],
+input[type=search],
 textarea {
     background-color:var(--transparent-bg);
     color:var(--primary-color);
