--- a/resources/assets/sass/v3/partial/purchase-packages.scss
+++ b/resources/assets/sass/v3/partial/purchase-packages.scss
@@ -38,6 +38,8 @@
         margin-bottom:0;
         color: var(--light-text);
         //text-shadow: 1px 1px 13px #000;
+        max-height: 2rem;
+        overflow: hidden;
     }
 
     .costs {
