--- a/resources/assets/sass/v3/partial/purchase-packages.scss
+++ b/resources/assets/sass/v3/partial/purchase-packages.scss
@@ -26,6 +26,7 @@
         margin-bottom:3rem;
         max-width:100%;
         height:10rem;
+        max-height:150px;
 
         img {
             max-width:100%;
@@ -74,7 +75,7 @@
 
     .collection {
         position: relative;
-        margin:1rem auto 2.86rem;
+        margin:1rem auto 2.81rem;
     }
 
     .link {
