--- a/resources/assets/sass/v3/layout/content/package-single.scss
+++ b/resources/assets/sass/v3/layout/content/package-single.scss
@@ -14,9 +14,10 @@
 
         img {
             display: inline-block;
-            max-width:100%;
             height:auto;
             margin-bottom:0;
+            max-width: 250px;
+            width: 100%;
         }
 
         .label.top-left {
