big banner logo support

--- a/resources/assets/sass/v3/pagebuilder/blocks/big_banner.scss
+++ b/resources/assets/sass/v3/pagebuilder/blocks/big_banner.scss
@@ -40,6 +40,10 @@
                 padding-top:31vh;
             }
 
+            &.with-logo {
+                padding-top:100px;
+            }
+
             z-index:2;
 
             h1 {
