--- a/resources/assets/sass/v3/partial/formbuilder.scss
+++ b/resources/assets/sass/v3/partial/formbuilder.scss
@@ -1,5 +1,13 @@
 .formbuilder {
     .form {
         @import "./../layout/default-content";
+
+        > .row {
+            margin-top:30px;
+
+            &:first-child {
+                margin-top: 0;
+            }
+        }
     }
 }
