--- a/resources/assets/sass/v3/partial/formbuilder.scss
+++ b/resources/assets/sass/v3/partial/formbuilder.scss
@@ -6,7 +6,7 @@
             margin-top:30px;
 
             &:first-child {
-                margin-top: 0;
+                margin-top: 15px;
             }
         }
     }
