fix issue with to high purchase package block on overview

--- a/resources/assets/sass/v3/partial/purchase-packages.scss
+++ b/resources/assets/sass/v3/partial/purchase-packages.scss
@@ -6,6 +6,7 @@
     padding:20px;
     margin-bottom:30px;
     text-align: center;
+    max-height:406px;
 
     @include box-shadow(0 0 30px -15px #000);
 
