fix for webkit update (webkit bug?)

--- a/resources/assets/sass/v3/layout/_navigation.scss
+++ b/resources/assets/sass/v3/layout/_navigation.scss
@@ -1,6 +1,7 @@
 .main-nav {
     position: fixed;
     background: transparent;
+    background-blend-mode: color;
     border: 0;
 
     margin-bottom: 0;
