--- a/resources/assets/sass/v2/layout/content/table-cell.scss
+++ b/resources/assets/sass/v2/layout/content/table-cell.scss
@@ -11,6 +11,7 @@
             display: table-cell;
             float: none;
             vertical-align: middle;
+            width:100%;
         }
     }
 }
