v3 fix for table-cell

--- a/resources/assets/sass/v3/layout/content/_content.scss
+++ b/resources/assets/sass/v3/layout/content/_content.scss
@@ -50,6 +50,7 @@
             display: table-cell;
             float: none;
             vertical-align: middle;
+            width:100%;
         }
     }
 }
