--- a/resources/assets/sass/v3/partial/rulegate.scss
+++ b/resources/assets/sass/v3/partial/rulegate.scss
@@ -9,6 +9,20 @@
 
     }
 
+    @keyframes pulse {
+        0% {
+            box-shadow: 0 0 0 0px rgba(0, 0, 0, 0.2);
+        }
+        100% {
+            box-shadow: 0 0 0 20px rgba(0, 0, 0, 0);
+        }
+    }
+
+    button.accept-rules {
+
+        animation: pulse 2s infinite;
+    }
+
     &-form-alert {
         padding:1rem;
 
